<?xml version="1.0"?>
<package format="2">
  <name>roscpp_example</name>
  <version>0.0.0</version>
  <description>The roscpp_example package</description>
  <maintainer email="vinicius@todo.todo">vinicius</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!--<depend>std_msgs</depend>--> <!--why isn't this needed?-->

</package>
